<resources>
    <string name="app_name">Satria Adhi Pradana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="cancel">Cancel</string>
    <string name="name_not_empty">The name cannot be empty</string>
    <string name="email_not_correct">The email address is not specified correctly</string>
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="user_exist">A user with such data already exists</string>
    <string name="error_save_data">Error with save data</string>
    <string name="user_doesnt_exist">There is no user with such data</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="_1593">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="trade_by">Trade by</string>
    <string name="bata"> bata</string>
    <string name="location">Location</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="phons">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="computers">Computers</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="color">Color:</string>
</resources>